form spacing fixed

--- a/css/style.css
+++ b/css/style.css
@@ -301,7 +301,7 @@ footer .subscribe-form {
 
 .subscribe-form h4 {
     font-weight: 500;
-    margin-bottom: 13px;
+    margin-bottom: 20px;
     font-size: 30px;
     line-height: 29px;
     color: #FFFFFF;
@@ -312,7 +312,7 @@ footer .subscribe-form {
     background-color: transparent;
     border: 1px solid whitesmoke;
     border-radius: 10px;
-    padding: 26px 0px 26px 21px;
+    padding: 22px 0px 22px 21px;
     font-weight: 400;
     font-size: 18px;
     color: #F3F3F3;
